movie-workflow/old/old-service-mesh/workflow-deployment-no-pv.yaml
##################################################################################################
# owner service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: owner
  labels:
    app: owner
    service: owner
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: owner
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owner-v1
  labels:
    app: owner
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owner
      version: v1
  template:
    metadata:
      labels:
        app: owner
        version: v1
    spec:
      serviceAccountName: owner
      containers:
      - name: owner
        image: document-base:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      - name: tcpdump
        image: corfr/tcpdump
        command:
          - /bin/sleep
          - infinity
---
##################################################################################################
# vfx-1 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: vfx-1
  labels:
    app: vfx-1
    service: vfx-1
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: vfx-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vfx-1-v1
  labels:
    app: vfx-1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vfx-1
      version: v1
  template:
    metadata:
      labels:
        app: vfx-1
        version: v1
    spec:
      serviceAccountName: vfx-1
      containers:
      - name: vfx-1
        image: vfx-1:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      - name: tcpdump
        image: corfr/tcpdump
        command:
          - /bin/sleep
          - infinity
---
##################################################################################################
# vfx-2 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: vfx-2
  labels:
    app: vfx-2
    service: vfx-2
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: vfx-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vfx-2-v1
  labels:
    app: vfx-2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vfx-2
      version: v1
  template:
    metadata:
      labels:
        app: vfx-2
        version: v1
    spec:
      serviceAccountName: vfx-2
      containers:
      - name: vfx-2
        image: document-base:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      - name: tcpdump
        image: corfr/tcpdump
        command:
          - /bin/sleep
          - infinity
---
##################################################################################################
# vfx-3 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: vfx-3
  labels:
    app: vfx-3
    service: vfx-3
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: vfx-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vfx-3-v1
  labels:
    app: vfx-3
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vfx-3
      version: v1
  template:
    metadata:
      labels:
        app: vfx-3
        version: v1
    spec:
      serviceAccountName: vfx-3
      containers:
      - name: vfx-3
        image: document-base:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      - name: tcpdump
        image: corfr/tcpdump
        command:
          - /bin/sleep
          - infinity
---
##################################################################################################
# color service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: color
  labels:
    app: color
    service: color
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: color
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-v1
  labels:
    app: color
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: v1
  template:
    metadata:
      labels:
        app: color
        version: v1
    spec:
      serviceAccountName: color
      containers:
      - name: color
        image: document-base:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      - name: tcpdump
        image: corfr/tcpdump
        command:
          - /bin/sleep
          - infinity
---
##################################################################################################
# sound service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: sound
  labels:
    app: sound
    service: sound
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: sound
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sound-v1
  labels:
    app: sound
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sound
      version: v1
  template:
    metadata:
      labels:
        app: sound
        version: v1
    spec:
      serviceAccountName: sound
      volumes:
      containers:
      - name: sound
        image: document-base:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      - name: tcpdump
        image: corfr/tcpdump
        command:
          - /bin/sleep
          - infinity
---
##################################################################################################
# hdr service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: hdr
  labels:
    app: hdr
    service: hdr
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: hdr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hdr-v1
  labels:
    app: hdr
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hdr
      version: v1
  template:
    metadata:
      labels:
        app: hdr
        version: v1
    spec:
      serviceAccountName: hdr
      containers:
      - name: hdr
        image: document-base:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
      - name: tcpdump
        image: corfr/tcpdump
        command:
          - /bin/sleep
          - infinity
---
